--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title">title</string>
     <string name="add_notes">Add Notes</string>
     <string name="update_notes">Update Notes</string>
+    <string name="hint">hint</string>
 </resources>
